(fixed bug of overflow on x axis.)

--- a/car-app-frontend/src/index.css
+++ b/car-app-frontend/src/index.css
@@ -1,5 +1,7 @@
 body {
-  margin: 5px;
+  margin:auto;
+  max-width: 100vw;
+  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
